Simplify protection config and harden JVM bridges