@@ -12,6 +12,7 @@ public final class JvmRunner {
     public JvmRunResult run(Path jar, String mainClass, List<String> args) throws IOException, InterruptedException {
         ArrayList<String> command = new ArrayList<>();
         command.add(Path.of(System.getProperty("java.home")).resolve("bin").resolve("java").toString());
+        command.add("--enable-native-access=ALL-UNNAMED");
         command.add("-cp");
         command.add(jar.toString());
         command.add(mainClass);
